--- a/app/templates/skeleton/index.html
+++ b/app/templates/skeleton/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="<%= _.camelize(appname) %>">
+<html ng-app="<%= _s.camelize(appname) %>">
 <head>
   <title></title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
